--- a/x-pack/plugin/core/src/main/config/log4j2.properties
+++ b/x-pack/plugin/core/src/main/config/log4j2.properties
@@ -118,10 +118,6 @@ appender.behavioral_analytics_rolling.policies.size.type = SizeBasedTriggeringPo
 appender.behavioral_analytics_rolling.policies.size.size = 1GB
 appender.behavioral_analytics_rolling.strategy.type = DefaultRolloverStrategy
 appender.behavioral_analytics_rolling.strategy.fileIndex = nomax
-appender.behavioral_analytics_rolling.filter.analytics_events.type = MarkerFilter
-appender.behavioral_analytics_rolling.filter.analytics_events.onMismatch = DENY
-appender.behavioral_analytics_rolling.filter.analytics_events.onMatch = ACCEPT
-appender.behavioral_analytics_rolling.filter.analytics_events.marker = ANALYTICS_EVENT
 
 logger.xpack_security_audit_logfile.name = org.elasticsearch.xpack.security.audit.logfile.LoggingAuditTrail
 logger.xpack_security_audit_logfile.level = info
@@ -135,7 +131,7 @@ logger.samlxml_decrypt.level = fatal
 logger.saml2_decrypt.name = org.opensaml.saml.saml2.encryption.Decrypter
 logger.saml2_decrypt.level = fatal
 
-logger.behavioral_analytics_logfile.name = org.elasticsearch.xpack.application.analytics.AnalyticsEventEmitterService
+logger.behavioral_analytics_logfile.name = org.elasticsearch.xpack.application.analytics.AnalyticsEventLogger
 logger.behavioral_analytics_logfile.level = info
 logger.behavioral_analytics_logfile.additivity = false
 logger.behavioral_analytics_logfile.appenderRef.behavioral_analytics_rolling.ref = behavioral_analytics_rolling
