--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_search_application_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_search_application_put.yml
@@ -65,6 +65,9 @@ teardown:
                 query:
                   query_string:
                     query: "{{query_string}}"
+            dictionary:
+              query_string:
+                type: string
 
   - match: { result: "created" }
 
@@ -79,23 +82,20 @@ teardown:
       search_application.get:
         name: test-search-application
   - match: { indices: [ "test-index1", "test-index2" ] }
-  - match: {
-      template: {
-        script: {
-          source: {
-            query: {
-              query_string: {
+  - match:
+      template:
+        script:
+          source:
+            query:
+              query_string:
                 query: "{{query_string}}"
-              }
-            }
-          },
-          lang: "mustache",
-          options: {
+          lang: "mustache"
+          options:
             content_type: "application/json;charset=utf-8"
-          }
-        }
-      }
-    }
+        dictionary:
+          query_string:
+            type: string
+
 ---
 "Update Search Application":
   - do:
@@ -108,7 +108,10 @@ teardown:
               source:
                 query:
                   query_string:
-                    query: "{{query_string}}"
+                    query: "{{another-query_string}}"
+            dictionary:
+              another_query_string:
+                type: string
 
   - do:
       search_application.put:
@@ -119,10 +122,29 @@ teardown:
   - match: { result: "updated" }
 
   - do:
-     search_application.get:
-       name: test-updated-search-application
+      search_application.get:
+        name: test-updated-search-application
   - match: { template: null }
   - match: { indices: [ "test-index3", "test-index4" ] }
+
+
+---
+"Update Search Application - Dictionary is not a valid JSON Schema":
+  - do:
+      catch: bad_request
+      search_application.put:
+        name: test-updated-search-application
+        body:
+          indices: [ "test-index1", "test-index2" ]
+          template:
+            script:
+              source:
+                query:
+                  query_string:
+                    query: "{{query_string}}"
+            dictionary:
+              query_string:
+                type: notValidType
 
 ---
 "Create Search Application - Index does not exist":
