--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/bulk/11_dynamic_templates.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/bulk/11_dynamic_templates.yml
@@ -1,6 +1,7 @@
 ---
 "Dynamic templates":
   - skip:
+      features: contains
       version: " - 8.7.99"
       reason: "Exception type has changed in 8.8.0"
 
@@ -140,8 +141,10 @@
   - match: { errors: true }
   - match: { items.0.index.status: 400 }
   - match: { items.0.index.error.type: document_parsing_exception }
+  - contains: { items.0.index.error.reason: "Can't find dynamic template for dynamic template name [bar_foo] of field [foo_location]"}
   - match: { items.1.index.status: 400 }
   - match: { items.1.index.error.type: document_parsing_exception }
+  - contains: { items.1.index.error.reason: "Can't find dynamic template for dynamic template name [foo_bar] of field [foo_location]"}
   - match: { items.2.index.status: 201 }
   - match: { items.2.index.result: created }
 
