--- a/docs/changelog/94724.yaml
+++ b/docs/changelog/94724.yaml
@@ -1,5 +1,5 @@
 pr: 94724
-summary: Expose authorization state as an object in transform stats
+summary: Expose authorization failure as transform health issue
 area: Transform
 type: enhancement
 issues: []
