--- a/modules/ingest-geoip/build.gradle
+++ b/modules/ingest-geoip/build.gradle
@@ -62,7 +62,7 @@ if (Os.isFamily(Os.FAMILY_WINDOWS)) {
 }
 
 tasks.named("internalClusterTest") {
-  onlyIf { OS.current() != OS.WINDOWS }
+  onlyIf("Only if OS != windows") { OS.current() != OS.WINDOWS }
 }
 
 tasks.named("forbiddenPatterns").configure {
