Gradle task to verify test coverage for transport classes
This commit addes a gradle plugin that will trigger jacoco test coverage report generation.
That report in xml form is then parsed to verify that all the methods using
StreamInput/Output have at lest 90% test coverage.

--- a/build-tools-internal/build.gradle
+++ b/build-tools-internal/build.gradle
@@ -187,6 +187,10 @@ gradlePlugin {
       id = 'elasticsearch.internal-yaml-rest-test'
       implementationClass = 'org.elasticsearch.gradle.internal.test.rest.InternalYamlRestTestPlugin'
     }
+    transport_coverage {
+      id = 'elasticsearch.transport-coverage'
+      implementationClass = 'org.elasticsearch.gradle.internal.coverage.TransportClassesCoveragePlugin'
+    }
   }
 }
 
@@ -265,6 +269,7 @@ dependencies {
   // needs to match the jackson minor version in use
   api buildLibs.json.schema.validator
   api buildLibs.jackson.dataformat.yaml
+  api buildLibs.jackson.dataformat.xml
   api buildLibs.asm
   api buildLibs.asm.tree
   api buildLibs.httpclient
@@ -310,6 +315,7 @@ dependencies {
   testImplementation buildLibs.spock.junit4
   testImplementation buildLibs.json.assert
   integTestImplementation buildLibs.xmlunit.core
+  integTestImplementation buildLibs.jackson.dataformat.xml
 
 }
 
