--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/55_search_application_search.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/55_search_application_search.yml
@@ -41,6 +41,11 @@ setup:
               params:
                 field_name: field1
                 field_value: value1
+            dictionary:
+              field_name:
+                type: string
+              field_value:
+                type: string
 
   - do:
       index:
@@ -121,6 +126,18 @@ teardown:
 
   - match: { hits.total.value: 1 }
   - match: { hits.hits.0._id: "doc2" }
+
+---
+"Query Search Application with invalid parameter validation":
+
+  - do:
+      catch: "bad_request"
+      search_application.search:
+        name: test-search-application
+        body:
+          params:
+            field_name: field3
+            field_value: 35
 
 ---
 "Query Search Application - not found":
