Add more context to onlyif declarations

--- a/build-tools-internal/src/main/groovy/elasticsearch.stable-api.gradle
+++ b/build-tools-internal/src/main/groovy/elasticsearch.stable-api.gradle
@@ -45,7 +45,7 @@ BuildParams.bwcVersions.withIndexCompatible({ it.onOrAfter(Version.fromString(ex
   }
 
   jarApiComparisonTask.configure {
-    onlyIf {
+    onlyIf("Only if OS != windows") {
       !Os.isFamily(Os.FAMILY_WINDOWS)
     }
   }
