--- a/distribution/packages/build.gradle
+++ b/distribution/packages/build.gradle
@@ -392,13 +392,13 @@ subprojects {
     tasks.named("check").configure { dependsOn "checkExtraction" }
     if (project.name.contains('deb')) {
       tasks.named("checkExtraction").configure {
-        onlyIf("Only if dpkg exists") { dpkgExists }
+        onlyIf("Only if dpkg exists", dpkgExists)
         commandLine 'dpkg-deb', '-x', "${-> buildDist.get().outputs.files.filter(debFilter).singleFile}", packageExtractionDir
       }
     } else {
       assert project.name.contains('rpm')
       tasks.named("checkExtraction").configure {
-        onlyIf("Only if rpm exists") { rpmExists }
+        onlyIf("Only if rpm exists", rpmExists)
         final File rpmDatabase = new File(extractionDir, 'rpm-database')
         commandLine 'rpm',
           '--badreloc',
@@ -422,7 +422,7 @@ subprojects {
     tasks.named("check").configure { dependsOn "checkLicense" }
     if (project.name.contains('deb')) {
       tasks.named("checkLicense").configure {
-        onlyIf("Only if dpkg exists") { dpkgExists }
+        onlyIf("Only if dpkg exists", dpkgExists)
         doLast {
           Path copyrightPath
           String expectedLicense
@@ -441,7 +441,7 @@ subprojects {
     } else {
       assert project.name.contains('rpm')
       tasks.named("checkLicense").configure {
-        onlyIf("Only if rpm exists") { rpmExists }
+        onlyIf("Only if rpm exists", rpmExists)
         doLast {
           String licenseFilename
           licenseFilename = "ELASTIC-LICENSE-2.0.txt"
@@ -474,7 +474,7 @@ subprojects {
 
     if (project.name.contains('deb')) {
       checkLicenseMetadataTaskProvider.configure { LoggedExec exec ->
-        onlyIf("Only if dpkg exists") { dpkgExists }
+        onlyIf("Only if dpkg exists", dpkgExists)
         exec.commandLine 'dpkg-deb', '--info', "${-> buildDist.get().outputs.files.filter(debFilter).singleFile}"
         exec.getCaptureOutput().set(true)
         doLast {
@@ -504,7 +504,7 @@ subprojects {
     } else {
       assert project.name.contains('rpm')
       checkLicenseMetadataTaskProvider.configure { LoggedExec exec ->
-        onlyIf("Only if rpm exists") { rpmExists }
+        onlyIf("Only if rpm exists", rpmExists)
         exec.commandLine 'rpm', '-qp', '--queryformat', '%{License}', "${-> buildDist.get().outputs.files.singleFile}"
         exec.getCaptureOutput().set(true)
         doLast {
