--- a/x-pack/plugin/eql/qa/correctness/build.gradle
+++ b/x-pack/plugin/eql/qa/correctness/build.gradle
@@ -41,7 +41,7 @@ def runTaskCluster = testClusters.register('runTask') {
 }
 
 tasks.named('javaRestTest').configure {
-  onlyIf("Only if FIPS mode disabled and service accoutn file available") {
+  onlyIf("FIPS mode disabled and service accoutn file available") {
       serviceAccountFile && BuildParams.inFipsJvm == false
   }
 
