--- a/qa/os/windows-2016/build.gradle
+++ b/qa/os/windows-2016/build.gradle
@@ -8,6 +8,6 @@ if (boxId != null) {
 } else {
   // box id was not supplied, so disable the distro tests
   tasks.withType(GradleDistroTestTask).configureEach {
-    onlyIf("always false") { false }
+    enabled = false
   }
 }
