--- a/x-pack/plugin/core/src/main/resources/org/elasticsearch/xpack/entsearch/analytics/behavioral_analytics-events-mappings.json
+++ b/x-pack/plugin/core/src/main/resources/org/elasticsearch/xpack/entsearch/analytics/behavioral_analytics-events-mappings.json
@@ -108,8 +108,16 @@
               }
             },
             "sort": {
-                "type": "keyword",
-                "ignore_above": 1024
+              "properties": {
+                "name": {
+                  "type": "keyword",
+                  "ignore_above": 1024
+                },
+                "direction": {
+                  "type": "keyword",
+                  "ignore_above": 1024
+                }
+              }
             },
             "results": {
               "properties": {
@@ -134,6 +142,10 @@
                     "page": {
                       "properties": {
                         "url": {
+                          "type": "keyword",
+                          "ignore_above": 1024
+                        },
+                        "title": {
                           "type": "keyword",
                           "ignore_above": 1024
                         }
