fix: error message

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/get/100_synthetic_source.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/get/100_synthetic_source.yml
@@ -909,7 +909,7 @@ flattened field no doc values:
       reason: support for synthetic source on flattened fields added in 8.8.0
 
   - do:
-      catch: /field \[flattened\] of type \[flattened\] doesn't support synthetic source because it doesn't have doc values and isn't stored/
+      catch: /field \[flattened\] of type \[flattened\] doesn't support synthetic source because it doesn't have doc values/
       indices.create:
         index: test
         body:
