--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ import com.fasterxml.jackson.databind.JsonNode
 import com.fasterxml.jackson.databind.ObjectMapper
 
 import org.elasticsearch.gradle.Version
+import org.elasticsearch.gradle.VersionProperties
 import org.elasticsearch.gradle.internal.BaseInternalPluginBuildPlugin
 import org.elasticsearch.gradle.internal.ResolveAllDependencies
 import org.elasticsearch.gradle.internal.info.BuildParams
@@ -159,6 +160,38 @@ if (project.gradle.startParameter.taskNames.find { it.startsWith("checkPart") } 
 subprojects { proj ->
   apply plugin: 'elasticsearch.base'
 }
+repositories {
+  // Only necessary when building plugins against SNAPSHOT versions of Elasticsearch
+  maven {
+    url = 'https://snapshots.elastic.co/maven/'
+    mavenContent {
+      if (gradle.includedBuilds) {
+        // When building in a composite, restrict this to only resolve the Java REST client
+        includeModule 'co.elastic.clients', 'elasticsearch-java'
+      }
+    }
+  }
+  if (gradle.includedBuilds.isEmpty()) {
+    maven {
+      url = "https://artifacts-snapshot.elastic.co/elasticsearch/${elasticsearchVersion}/maven"
+      mavenContent {
+        includeModule 'org.elasticsearch', 'elasticsearch'
+      }
+    }
+  }
+
+  // Same for Lucene, add the snapshot repo based on the currently used Lucene version
+  def luceneVersion = VersionProperties.getLucene()
+  if (luceneVersion.contains('-snapshot')) {
+    def matcher = luceneVersion =~ /[0-9\.]+-snapshot-([a-z0-9]+)/
+    assert matcher.matches(): "Invalid Lucene snapshot version '${luceneVersion}'"
+    maven {
+      url = "https://s3.amazonaws.com/download.elasticsearch.org/lucenesnapshots/${matcher.group(1)}"
+    }
+  }
+
+  mavenCentral()
+}
 
 dependencies {
   jacocoAggregation project(':server')
@@ -171,7 +204,9 @@ reporting {
     }
   }
 }
-
+tasks.named('check') {
+  dependsOn tasks.named('testCodeCoverageReport', JacocoReport)
+}
 
 allprojects {
   // We disable this plugin for now till we shaked out the issues we see
