--- a/x-pack/plugin/security/qa/multi-cluster/src/javaRestTest/resources/roles.yml
+++ b/x-pack/plugin/security/qa/multi-cluster/src/javaRestTest/resources/roles.yml
@@ -11,7 +11,7 @@ read_remote_shared_metrics:
       clusters: [ 'my_*' ]
 
 ccr_user_role:
-  cluster: [ 'manage_ccr' ]
+  cluster: [ 'manage_ccr', 'monitor' ]
   indices:
     - names: [ 'follower*', 'metrics-*' ]
       privileges: [ 'monitor', 'read', 'write', 'manage_follow_index' ]
