--- a/x-pack/plugin/ent-search/build.gradle
+++ b/x-pack/plugin/ent-search/build.gradle
@@ -15,6 +15,11 @@ dependencies {
   compileOnly project(path: xpackModule('core'))
   api project(':modules:lang-mustache')
 
+  implementation "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
+  implementation "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}"
+  implementation "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
+  implementation "com.networknt:json-schema-validator:${versions.networknt_json_schema_validator}"
+
   testImplementation(testArtifact(project(xpackModule('core'))))
   testImplementation(project(':modules:lang-mustache'))
 
