--- a/x-pack/plugin/ent-search/build.gradle
+++ b/x-pack/plugin/ent-search/build.gradle
@@ -15,16 +15,14 @@ dependencies {
   compileOnly project(path: xpackModule('core'))
   api project(':modules:lang-mustache')
 
-  implementation "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
-
-  implementation "com.networknt:json-schema-validator:${versions.networknt_json_schema_validator}"
-  implementation "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}"
-
   // JSON Schema dependencies
-  runtimeOnly "org.apache.commons:commons-lang3:${versions.commons_lang3}"
+  implementation "org.apache.commons:commons-lang3:${versions.commons_lang3}"
+  implementation "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
   implementation "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
-  runtimeOnly("org.slf4j:slf4j-api:${versions.slf4j}")
-  runtimeOnly("org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}")
+  implementation "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}"
+  implementation "org.slf4j:slf4j-api:${versions.slf4j}"
+  implementation "org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}"
+  implementation "com.networknt:json-schema-validator:${versions.networknt_json_schema_validator}"
 
   testImplementation(testArtifact(project(xpackModule('core'))))
   testImplementation(project(':modules:lang-mustache'))
