--- a/x-pack/plugin/rank-rrf/build.gradle
+++ b/x-pack/plugin/rank-rrf/build.gradle
@@ -7,7 +7,7 @@
 
 apply plugin: 'elasticsearch.internal-es-plugin'
 apply plugin: 'elasticsearch.internal-cluster-test'
-apply plugin: 'elasticsearch.legacy-yaml-rest-test'
+apply plugin: 'elasticsearch.internal-yaml-rest-test'
 
 esplugin {
   name 'rank-rrf'
@@ -16,10 +16,11 @@ esplugin {
   extendedPlugins = ['x-pack-core']
 }
 
-archivesBaseName = 'x-pack-rank-rrf'
-
 dependencies {
   compileOnly project(path: xpackModule('core'))
+
   testImplementation(testArtifact(project(xpackModule('core'))))
   testImplementation(project(':modules:lang-painless'))
+
+  clusterPlugins project(':x-pack:plugin:rank-rrf')
 }
