--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/get/100_synthetic_source.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/get/100_synthetic_source.yml
@@ -920,3 +920,53 @@ flattened field no doc values:
               flattened:
                 type: flattened
                 doc_values: false
+
+---
+flattened field with ignore_above:
+  - skip:
+      version: " - 8.7.99"
+      reason: support for synthetic source on flattened fields added in 8.8.0
+
+  - do:
+      indices.create:
+        index: test
+        body:
+          mappings:
+            _source:
+              mode: synthetic
+            properties:
+              field:
+                type: flattened
+                ignore_above: 10
+
+  - do:
+      index:
+        index: test
+        id: 1
+        body:
+          field:
+            key1:
+              key2: "key2"
+              key3: "key3_ignored"
+            key4: "key4_ignored"
+            key5:
+              key6: "key6_ignored"
+            key7: "key7"
+
+  - do:
+      get:
+        index: test
+        id: 1
+
+  - match: { _index: "test" }
+  - match: { _id: "1" }
+  - match: { _version: 1 }
+  - match: { found: true }
+  - match:
+      _source:
+        field:
+          key1:
+            key2: "key2"
+          key7: "key7"
+
+  - is_false: fields
