Implement Grok command (ESQL-955)

--- a/x-pack/plugin/esql/build.gradle
+++ b/x-pack/plugin/esql/build.gradle
@@ -18,6 +18,7 @@ dependencies {
   implementation project('compute')
   implementation project('compute:ann')
   implementation project(':libs:elasticsearch-dissect')
+  implementation project(':libs:elasticsearch-grok')
   annotationProcessor project('compute:gen')
 
   testImplementation project('qa:testFixtures')
