--- a/docs/changelog/95070.yaml
+++ b/docs/changelog/95070.yaml
@@ -1,5 +1,5 @@
 pr: 95070
-summary: Ignore node-replacement decider during reconciliation
+summary: Weaken node-replacement decider during reconciliation
 area: Allocation
 type: bug
 issues: []
