Search maxPageSize documents at a time

--- a/x-pack/plugin/esql/compute/build.gradle
+++ b/x-pack/plugin/esql/compute/build.gradle
@@ -7,6 +7,7 @@ dependencies {
   annotationProcessor project('gen')
 
   testImplementation project(':test:framework')
+  testImplementation(project(xpackModule('ql')))
 }
 
 tasks.named("compileJava").configure {
