start to move scripted metric agg tests to yml

--- a/x-pack/plugin/rank-rrf/build.gradle
+++ b/x-pack/plugin/rank-rrf/build.gradle
@@ -22,5 +22,6 @@ dependencies {
   testImplementation(testArtifact(project(xpackModule('core'))))
   testImplementation(project(':modules:lang-painless'))
 
+  clusterModules project(':modules:lang-painless')
   clusterPlugins project(':x-pack:plugin:rank-rrf')
 }
