--- a/.ci/jobs.t/elastic+elasticsearch+pull-request+part-1.yml
+++ b/.ci/jobs.t/elastic+elasticsearch+pull-request+part-1.yml
@@ -2,4 +2,4 @@
 jjbb-template: pull-request-gradle-unix.yml
 vars:
   - pr-job: "part-1"
-  - gradle-args: "-Dignore.tests.seed checkPart1"
+  - gradle-args: "-Dignore.tests.seed checkPart1 methodCoverageVerifier"
